
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int (* UseBuffer ) () ;} ;


 TYPE_1__* OSD ;
 int stub1 () ;

int OSDUseBuffer(void)
{
   if (OSD == ((void*)0)) return 0;

   return OSD->UseBuffer();
}
